--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,16 +3,18 @@
   margin: 0;
   box-sizing: border-box;
 }
-body{
-    font-family: Helvetica, Arial, sans-serif;
+body {
+  font-family: Helvetica, Arial, sans-serif;
 }
 :root {
   --gray-color: #3c3c43;
   --underline-color: #7f0019;
-  --red-color: #7F0019;
+  --red-color: #7f0019;
   --widget-margin: 5rem;
   --max-width: 1920px;
   --light-gray-color: #f5f3f2;
+  --gutter: 6.25rem;
+  --black-color: #212121;
 }
 .promo-bar {
   display: flex;
@@ -164,42 +166,39 @@ body{
   color: var(--gray-color);
 }
 
-
-
 .sale-container {
-    display: grid;
-    grid-template-columns: 1fr 60%;
-    grid-template-rows: auto;
-    position: relative;
-    grid-gap: 1rem;
-    background-color: #d6ad7f;
-    padding: var(--widget-margin) 0;
-    aspect-ratio: 2 / 0.9;
-    align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 60%;
+  grid-template-rows: auto;
+  position: relative;
+  grid-gap: 1rem;
+  background-color: #d6ad7f;
+  padding: var(--widget-margin) 0;
+  aspect-ratio: 2 / 0.9;
+  align-items: center;
 }
-.sale-carousel-wrapper{
-    width: 100%;
-position: relative;}
+.sale-carousel-wrapper {
+  width: 100%;
+  position: relative;
+}
 
- 
-
-.sale-carousel{
-    display: flex;
-    gap: 0.5rem;
-    overflow-x: auto;   
+.sale-carousel {
+  display: flex;
+  gap: 0.5rem;
+  overflow-x: auto;
 }
 .sale-carousel::-webkit-scrollbar {
-  display: none; 
-}    
+  display: none;
+}
 
 .sale-carousel-card {
-    text-align: center;
-    text-decoration: none;
-    color: inherit;
-    display: block;
-    gap: .5rem;
-    scroll-snap-align: start;
-    position: relative;
+  text-align: center;
+  text-decoration: none;
+  color: inherit;
+  display: block;
+  gap: 0.5rem;
+
+  position: relative;
 }
 /* .sale-carousel-card::after {
   content: "";
@@ -218,22 +217,20 @@ position: relative;}
   width: 20%; 
 } */
 
-
 .sale-carousel-card p::after {
-    content: '';
-    display: block;
-    position: absolute;
-    left: 0;
-    bottom: -0.2em; 
-    width: 0;
-    height: 2px;
-    background-color: var(--underline-color);
-    transition: width 0.2s;
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: -0.2em;
+  width: 0;
+  height: 2px;
+  background-color: var(--underline-color);
+  transition: width 0.2s;
 }
 .sale-carousel-card:hover p::after {
-    width: 100%;
+  width: 100%;
 }
-
 
 .sale-carousel-card img {
   width: 100%;
@@ -243,112 +240,112 @@ position: relative;}
   transition: opacity 0.3s ease-in-out;
 }
 .sale-carousel-card:hover img {
-    opacity: 1;}
+  opacity: 1;
+}
 .sale-carousel-text {
-    position: absolute;
-    letter-spacing: 0.3px;
-    bottom: 1.5rem;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 50;
-    font-size: clamp(1rem, 1vmax, 1.1rem);
-    color: #fff;
-    white-space: nowrap;
-    font-weight: bold;
-    text-align: center;
-    pointer-events: none;
+  position: absolute;
+  letter-spacing: 0.3px;
+  bottom: 1.5rem;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 50;
+  font-size: clamp(1rem, 1vmax, 1.1rem);
+  color: #fff;
+  white-space: nowrap;
+  font-weight: bold;
+  text-align: center;
+  pointer-events: none;
 }
 
-.sale-carousel-text::after:hover{
-    content: '';
-    background-color: var(--underline-color);
-    height: 2px;
-    width: 100%;
-    position: absolute;
-    bottom: -0.2rem;
+.sale-carousel-text::after:hover {
+  content: "";
+  background-color: var(--underline-color);
+  height: 2px;
+  width: 100%;
+  position: absolute;
+  bottom: -0.2rem;
 }
 .sale-text-container {
-    line-height: 1.5rem;
-    margin-left: 5rem;
-    color: var(--red-color);
+  line-height: 1.5rem;
+  margin-left: 5rem;
+  color: var(--red-color);
 }
 .promotion-title-text {
-    font-size: clamp(1.8rem, 2.6vmax, 3rem);
-    line-height: clamp(2rem, 2.8vmax, 3.2rem);
-    letter-spacing: 0.3px;
-    color: #7f0019;
-    display: block;
-    margin: 0;
-    padding: 0.5rem 0;
+  font-size: clamp(1.8rem, 2.6vmax, 3rem);
+  line-height: clamp(2rem, 2.8vmax, 3.2rem);
+  letter-spacing: 0.3px;
+  color: #7f0019;
+  display: block;
+  margin: 0;
+  padding: 0.5rem 0;
 }
 .promotion-title-text-promotion {
-    font-size: clamp(3.2rem, 6.6vmax, 8.5rem);
-    line-height: clamp(3.4rem, 6.9vmax, 8.7rem);
-    letter-spacing: 1px;
-    color: #7f0019;
-    display: block;
-    margin: 0;
+  font-size: clamp(3.2rem, 6.6vmax, 8.5rem);
+  line-height: clamp(3.4rem, 6.9vmax, 8.7rem);
+  letter-spacing: 1px;
+  color: #7f0019;
+  display: block;
+  margin: 0;
 }
 .promotion-subtitle-text {
-    font-size: clamp(1.1rem, 1.4vmax, 1.4rem);
-    line-height: clamp(1.3rem, 1.5vmax, 1.6rem);
-    letter-spacing: 0.3px;
-    color: #7f0019;
-    font-weight: normal;
-    display: block;
-    margin: 0;
-    padding: 0;
+  font-size: clamp(1.1rem, 1.4vmax, 1.4rem);
+  line-height: clamp(1.3rem, 1.5vmax, 1.6rem);
+  letter-spacing: 0.3px;
+  color: #7f0019;
+  font-weight: normal;
+  display: block;
+  margin: 0;
+  padding: 0;
 }
 
-.sale-text-container h4:last-of-type{
-   font-weight: normal; 
-   letter-spacing: 1px;
+.sale-text-container h4:last-of-type {
+  font-weight: normal;
+  letter-spacing: 1px;
 }
 
 .highlights-container {
-        background-color: var(--light-gray-color);
-
+  background-color: var(--light-gray-color);
 }
 
-.highlights-section
-{
+.highlights-section {
   padding-top: calc(var(--widget-margin) / 3);
-    --max-width: 1920px;
-    inline-size: Min(calc(100% - calc(2 * var(--widget-margin))), var(--max-width));
-    margin-inline: auto;
+  --max-width: 1920px;
+  inline-size: Min(
+    calc(100% - calc(2 * var(--widget-margin))),
+    var(--max-width)
+  );
+  margin-inline: auto;
 }
-.highlights-section h4{
-    font-size: clamp(0.5rem, 2.5vmax, 1.5rem);
-    margin-bottom: 1rem;
-    color: var(--gray-color);
-    font-weight: bold;
-         anchor-name: --highlights-carousel;
-
+.highlights-section h4 {
+  font-size: clamp(0.5rem, 2.5vmax, 1.5rem);
+  margin-bottom: 1rem;
+  color: var(--gray-color);
+  font-weight: bold;
+  anchor-name: --highlights-carousel;
 }
 
-.highlights-carousel-wrapper{
-    width: 100%;
-    position: relative;
+.highlights-carousel-wrapper {
+  width: 100%;
+  position: relative;
 }
 
 .highlights-carousel {
-    display: flex;  
-    justify-content: flex-start;    
-    overflow-x: auto;
-     -webkit-overflow-scrolling: touch; 
-     scroll-behavior: smooth; 
-    gap: 0.5rem;
-    cursor: grab;
-    padding-bottom: 0.5rem;
-     user-select: none; 
+  display: flex;
+  justify-content: flex-start;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  gap: 0.5rem;
+  cursor: grab;
+  padding-bottom: 0.5rem;
 }
- .highlights-carousel::-webkit-scrollbar {
-  display: none; 
+.highlights-carousel::-webkit-scrollbar {
+  display: none;
 }
-.highlights-carousel::scroll-button(left),.highlights-carousel::scroll-button(right){
+.highlights-carousel::scroll-button(left),
+.highlights-carousel::scroll-button(right) {
   font-size: clamp(0.5rem, 2.5vmax, 1.2rem);
   translate: -100%;
-  content: ' →';
+  content: " →";
   cursor: pointer;
   border: none;
   background-color: inherit;
@@ -356,63 +353,173 @@ position: relative;}
   position-anchor: --highlights-carousel;
   position-area: right center;
 }
-.highlights-carousel::scroll-button(left){
+.highlights-carousel::scroll-button(left) {
   translate: -200%;
-    content: '←';
-
+  content: "←";
 }
 
-
-.highlights-carousel > a{
-    flex: 0 0 auto;
-    width: calc((100vmax - 2.5 * var(--widget-margin)) / 4);
-    max-width: 460px;
-    text-decoration: none;
-    color: inherit;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    position: relative;
+.highlights-carousel > a {
+  flex: 0 0 auto;
+  width: calc((100vmax - 2.5 * var(--widget-margin)) / 4);
+  max-width: 460px;
+  text-decoration: none;
+  color: inherit;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  position: relative;
 }
 .highlights-carousel img {
-    width: 100%;
-    height: auto;
-    display: block;
-    aspect-ratio: 1 / 1;
-    object-fit: cover;
+  width: 100%;
+  height: auto;
+  display: block;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
 }
 
 .highlights-carousel p {
-    position: relative;
-    display: inline-block;
-    font-size: clamp(0.9rem, 1vmax, 1rem);
-    margin: 0.6rem 0;
-    text-align: left;
-    font-weight: bold;
-    line-height: 1.4;
-    color: var(--gray-color);
-    text-decoration: none;
+  position: relative;
+  display: inline-block;
+  font-size: clamp(0.9rem, 1vmax, 1rem);
+  margin: 0.6rem 0;
+  text-align: left;
+  font-weight: bold;
+  line-height: 1.4;
+  color: var(--gray-color);
+  text-decoration: none;
 }
 
 .highlights-carousel p::after {
-    content: '';
-    display: block;
-    position: absolute;
-    left: 0;
-    bottom: -0.2em; 
-    width: 0;
-    height: 3px;
-    background-color: var(--underline-color);
-    transition: width 0.2s;
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: -0.2em;
+  width: 0;
+  height: 3px;
+  background-color: var(--underline-color);
+  transition: width 0.2s;
 }
 
 .highlights-carousel a:hover p::after {
-    width: 100%;
+  width: 100%;
 }
 .highlights-carousel img {
-    transition: transform 0.3s ease;
+  transition: transform 0.3s ease;
 }
 
 .highlights-carousel a:hover img {
-    transform: scale(1.01);
+  transform: scale(1.01);
+}
+
+.hero-container {
+  inline-size: Min(calc(100% - calc(2 * var(--gutter))), var(--max-width));
+  margin-inline: auto;
+}
+.hero-carousel-wrapper {
+  position: relative;
+  width: 100%;
+  margin-top: var(--widget-margin);
+  margin-bottom: var(--widget-margin);
+  overflow: hidden;
+  anchor-name: --hero-carousel;
+  aspect-ratio: 2.5 / 1;
+}
+
+.hero-carousel {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  scroll-behavior: smooth;
+  gap: 0;
+  transition: transform 0.5s ease;
+  scroll-snap-type: x mandatory;
+}
+
+.hero-carousel > div {
+  scroll-snap-align: start;
+  position: relative;
+  width: 100%;
+  flex: 0 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero-carousel img {
+  width: 100%;
+  height: auto;
+}
+
+.hero-carousel-card-text {
+  position: absolute;
+  width: calc(
+    100% - (2 * (clamp(2rem, 2vmax, 3rem) + 2 * clamp(1.5rem, 2.3vmax, 2.4rem)))
+  );
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  text-align: left;
+  z-index: 2;
+}
+.hero-carousel-card-text h2 {
+  font-size: clamp(2rem, 5vmax, 4rem);
+  margin: 0;
+  padding: 0;
+  line-height: 1.1;
+  font-weight: bold;
+
+  filter: drop-shadow(0 0 0.5rem rgba(0, 0, 0, 0.5));
+}
+.hero-carousel-card-text a {
+  font-size: clamp(1rem, 1.1vmax, 1.1rem);
+  margin: 0;
+  padding: 0;
+  line-height: 1.1;
+  font-weight: 700;
+  color: #ffffff;
+  text-decoration: none;
+  filter: drop-shadow(0 0 0.5rem rgba(0, 0, 0, 0.5));
+}
+
+.hero-carousel-card-text a:hover {
+  cursor: pointer;
+}
+.hero-carousel-card-text a:hover span {
+  margin-left: 0.2rem;
+}
+.hero-carousel::scroll-button(left),
+.hero-carousel::scroll-button(right) {
+  font-size: clamp(0.5rem, 2.5vmax, 1.2rem);
+  content: " →";
+  cursor: pointer;
+  border: none;
+  position: fixed;
+  position-anchor: --hero-carousel;
+  z-index: 10;
+  background-color: var(--black-color);
+  padding: clamp(0.5rem, 1vmax, 1rem);
+  color: white;
+}
+.hero-carousel::scroll-button(left):disabled,
+.hero-carousel::scroll-button(right):disabled {
+  opacity: 0.3 !important;
+  cursor: default !important;
+}
+.hero-carousel::scroll-button(left) {
+  content: "←";
+}
+.hero-carousel:hover::scroll-button(left) {
+  position-area: center left;
+  translate: 100%;
+}
+.hero-carousel:hover::scroll-button(right) {
+  position-area: center right;
+  translate: -100%;
+}
+.hero-carousel::scroll-button(left):hover,
+.hero-carousel::scroll-button(right):hover {
+  opacity: 0.8;
 }
