--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,12 +62,13 @@ body {
     translate: -100%;
   }
 }
-
-.navbar {
-  background-color: white;
+header {
   position: sticky;
   top: 0;
-  overflow: hidden;
+  z-index: 100;
+}
+.navbar {
+  background-color: white;
   display: flex;
   flex-direction: column;
 }
@@ -470,7 +471,6 @@ body {
   padding: 0;
   line-height: 1.1;
   font-weight: bold;
-
   filter: drop-shadow(0 0 0.5rem rgba(0, 0, 0, 0.5));
 }
 .hero-carousel-card-text a {
