--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -523,3 +523,93 @@ header {
 .hero-carousel::scroll-button(right):hover {
   opacity: 0.8;
 }
+
+.best-seller-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.best-seller-section {
+  --max-width: 1920px;
+  inline-size: Min(
+    calc(100% - calc(2 * var(--widget-margin))),
+    var(--max-width)
+  );
+  margin-inline: auto;
+}
+.best-seller-section h4 {
+  font-size: 18px;
+  margin-bottom: 1rem;
+  color: var(--gray-color);
+  font-weight: bold;
+  letter-spacing: 0.25px;
+}
+
+.best-seller-grid {
+  display: grid;
+  align-items: start;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 0.5rem;
+}
+
+.best-seller-grid-card {
+  text-align: center;
+  text-decoration: none;
+  color: inherit;
+  display: block;
+  position: relative;
+}
+
+.best-seller-grid-card p::after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: -0.2em;
+  width: 0;
+  height: 3px;
+  background-color: var(--underline-color);
+  transition: width 0.2s;
+}
+.best-seller-grid-card:hover p::after {
+  width: 100%;
+}
+
+.best-seller-grid-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: cover;
+  opacity: 0.92;
+  transition: all 0.4s ease-in-out;
+}
+.best-seller-grid-card:hover img {
+  transform: scale(1.01);
+}
+.best-seller-grid-text {
+  position: absolute;
+  bottom: 1.2rem;
+  left: 1.5rem;
+  z-index: 50;
+  text-align: left;
+  font-size: clamp(1rem, 1vmax, 1.1rem);
+  color: #fff;
+  display: inline;
+  white-space: nowrap;
+  font-weight: bold;
+  filter: drop-shadow(0 0 1.5rem rgba(33, 33, 33, 0.6));
+}
+
+.best-seller-grid-text::after:hover {
+  content: "";
+  background-color: var(--underline-color);
+  height: 2px;
+  width: 100%;
+  position: absolute;
+  bottom: -0.2rem;
+}
+.best-seller-text-container {
+  line-height: 1.5rem;
+  margin-left: 5rem;
+  color: var(--red-color);
+}
